<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Stock</groupId>
	<artifactId>Stock</artifactId>
	<version>0.1</version>
	<packaging>pom</packaging>

	<properties>
		<maven.compiler.target>11</maven.compiler.target>
	    <maven.compiler.source>11</maven.compiler.source>
		<stock.version>0.1</stock.version>
		<spring.version>4.3.9.RELEASE</spring.version>
		<log4j.version>1.2.17</log4j.version>
		<mail.version>1.4</mail.version>
		<mysql.version>5.1.14</mysql.version>
		<gson.version>2.8.1</gson.version>
		<spring.security.version>4.2.3.RELEASE</spring.security.version>
		<servlet.version>3.0.1</servlet.version>
		<tiles.version>3.0.8</tiles.version>
		<jstl.version>1.2</jstl.version>
		<junit.version>4.12</junit.version>
		<poi.version>3.9</poi.version>
		<guava.version>25.1-jre</guava.version>
		<mockito.version>1.9.5</mockito.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.7.201606060606</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<fork>true</fork>
					<executable>${JAVA_HOME}/bin/javac</executable>
					<encoding>Cp1251</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
		    <groupId>pl.pragmatists</groupId>
		    <artifactId>JUnitParams</artifactId>
		    <version>1.1.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<modules>
		<module>StockSql</module>
		<module>StockCommon</module>
		<module>StockDao</module>
		<module>StockJobs</module>
		<module>StockMessage</module>
		<module>StockSecurity</module>
		<module>StockService</module>
		<module>StockApi</module>
		<module>StockUtil</module>
		<module>StockController</module>
  		<module>StockDocuments</module>
	</modules>
</project>